# mpd2mpris

./: .gitignore  CLAUDE.md  Makefile  README.md  babel.cfg  configure.ac  pyproject.toml  shell.nix
.github/workflows/: build.yml
data/: mpd2mpris.conf  mpdris2.conf
data/dbus-1/: org.mpris.MediaPlayer2.mpd.service
data/user/: mpDris2.service  mpd2mpris.service
debian/: changelog  control  copyright  mpDris2.1  mpDris2.1.in  mpd2mpris.1  mpd2mpris.install  mpd2mpris.manpages  mpdris2.install  mpdris2.manpages  rules
docs/: musicbrainz-cover-fallback.md  refactor-asyncio-dbus-fast.md
mpd2mpris/: __init__.py  __main__.py  _http.py  bridge.py  cli.py  cover.py  deezer.py  itunes.py  mpd_client.py  mpris.py  musicbrainz.py  mympd.py  radiobrowser.py  translate.py
mpdris2/: __init__.py  __main__.py  _http.py  bridge.py  cli.py  cover.py  daemon.py  deezer.py  itunes.py  mpd_client.py  mpris.py  musicbrainz.py  mympd.py  notify.py  radiobrowser.py  translate.py
po/: fr.po  mpdris2.pot
scripts/: version.py
src/: mpDris2.in.py  mpDris2.service.in
tests/: conftest.py  test_bridge.py  test_cli.py  test_cover.py  test_deezer.py  test_http.py  test_itunes.py  test_mpd_client.py  test_mpris.py  test_musicbrainz.py  test_mympd.py  test_notify.py  test_radiobrowser.py  test_translate.py
